[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["1988gadocansey <gadocansey@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.2"
alembic = "^1.13.1"
pytest = "^8.0.1"
jwt = "^1.3.1"
sqlmodel = "^0.0.16"
psycopg2-binary = "^2.9.9"
asyncpg = "^0.29.0"
python-dotenv = "^1.0.1"
#dependency-injector ="4.39.1"



[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
flake8 = "^7.0.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core","setuptools>=40.8.0"]
build-backend = "poetry.core.masonry.api"
